# dbztui

./: README.md  pyproject.toml
apps/: dbztui.py
ninesui/: styles.css
