[project]
name = "dbztui"
version = "0.1.0"
description = "Dragon Ball Z TUI application using ninesui and Dragon Ball API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.11.4",
    "textual>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbztui"]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
    "textual-dev>=1.7.0",
]
